<resources>
    <string name="app_name">HabitTracker</string>
    <string name="add_new_habit">Add new habit</string>
    <string name="edit_habit">Edit habit</string>
    <string name="habit_name">Name</string>
    <string name="habit_description">Description</string>
    <string name="priority_hint">Choose priority</string>
    <string name="choose_habit_type">Habit type</string>
    <string name="habit_type1">Good</string>
    <string name="habit_type2">Bad</string>
    <string name="habit_name_item">Habit name</string>
    <string name="repeat">Repeat</string>
    <string name="per">per</string>
    <string name="periodicity_hint">period</string>
    <string name="save_button">save</string>
    <string name="Day">Day</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about">Офигенный трекер привычек. Для доната: 9999 9999 9999 9999</string>
    <string name="mainViewFragmentLabel">My habits</string>
    <string name="habitEditorFragmentLabel">Habit editor</string>
    <string name="aboutFragmentLabel">About</string>
    <string name="menuAboutItem">About</string>
    <string name="myHabits">My habits</string>
    <string name="find_habit">Search</string>
    <string name="name_starts_with">Name starts with</string>
    <string name="creation_date">Sort by creation date</string>
    <string name="asc">ASC</string>
    <string name="desc">DES</string>

    <string-array name="periodicity">
        <item>Day</item>
        <item>Week</item>
        <item>Month</item>
    </string-array>

    <string-array name="priority">
        <item>Not high</item>
        <item>High</item>
        <item>Very high</item>
    </string-array>
</resources>
