<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView"
            style="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/find_habit"
            android:background="@color/colorAccent"
            android:padding="8dp"
            android:layout_gravity="center"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:text="@string/creation_date"
            android:layout_marginVertical="8dp"/>

        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/ascButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAlignment="center"
                app:icon="@drawable/ic_arrow_upward_black_24dp"
                app:iconGravity="textEnd"
                android:text="@string/asc"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/descButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:icon="@drawable/ic_arrow_downward_black_24dp"
                app:iconGravity="textStart"
                android:text="@string/desc"/>
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_starts_with"
            android:paddingVertical="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/habitFilter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>
</layout>