<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    android:background="@drawable/border"
    android:layout_marginBottom="4dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:id="@+id/habit_name_item"
        android:layout_marginHorizontal="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/habit_name_item"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/description_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:text="@string/habit_description"
        android:textColor="@color/design_default_color_on_secondary"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/habit_name_item" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/priorityItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:text="@string/priority_hint"
        android:textColor="@color/design_default_color_on_secondary"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/description_item" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/periodicityItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:text="@string/periodicity_hint"
        android:textColor="@color/design_default_color_on_secondary"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/priorityItem"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/typeItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:text="@string/choose_habit_type"
        android:textColor="@color/design_default_color_on_secondary"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/periodicityItem" />

</androidx.constraintlayout.widget.ConstraintLayout>